--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -19,11 +19,12 @@
             </div>
         </div>
         <div class="article_body">
-            {% if user.is_special_user or not article.special or article.author == user %}
+            {% if user.is_special_user or not article.special or article.author == user or user.is_superuser %}
                 <div class="article_image">
                     <img src="{{article.thumbnail.url}}" alt="{{article.title}} picture">
                 </div>
                 <p>{{article.content|linebreaks}}</p>
+                <p><a href='{% url "blog:share_article" article.slug %}'>Share Post</a></p>
             {% else %}
                 <div class="article_image_special">
                     <img src="{{article.thumbnail.url}}" alt="{{article.title}} picture">
