--- a/templates/blog/aside.html
+++ b/templates/blog/aside.html
@@ -8,6 +8,7 @@
     <p><a href="{% url 'blog:articles_period' 'last-week' %}">{% translate 'last week articles' %}</a></p>
     <p><a href="{% url 'blog:articles_period' 'last-day' %}">{% translate 'last day articles' %}</a></p>
     <p><a href="{% url 'blog:articles_period' 'last-five-articles' %}">{% translate 'last five articles' %}</a></p>
+    <p><a href="{% url 'blog:blog_feed' %}">{% translate 'RSS' %}</a></p>
 </div>
 <div>
     <h1>{% translate 'Most Viewed Articles' %}</h1>
