--- a/templates/blog/share_post.html
+++ b/templates/blog/share_post.html
@@ -1,14 +1,15 @@
 {% extends 'blog/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div>
-        <form actiom='' method='post'>
+        <form action='' method='post'>
             {% csrf_token %}
             {{form.errors}}
             person name: {{form.name}}<br/>
             person email: {{form.email}}<br/>
             Message: {{form.message}}<br/>
-            <input type='submit' value='Share post'/>
+            <input type='submit' value={% translate "share post" %}/>
         </form>
     </div>
 {% endblock content %}
